--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -11,6 +11,10 @@
     font-size: 20px;
 }
 
-@media (min-width: 400px) {
-  
+@media (max-width: 450px) {
+  .homeTitle{
+    width: 378px;
+    // padding: 3px;
+    // font-size: 10px;
+  }
 }
