--- a/src/styles/maillist.scss
+++ b/src/styles/maillist.scss
@@ -36,3 +36,20 @@
     cursor: pointer;
     padding: 10px;
 }
+
+@media (max-width:450px) {
+    .mailTitle{
+      font-size: 20px;
+    }
+
+    .mailInputContainer{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-items: center;
+    }
+
+    .mailInputContainer>button{
+      margin-top: 5px;
+    }
+}
