Fix price issue

--- a/src/styles/propertylist.scss
+++ b/src/styles/propertylist.scss
@@ -29,6 +29,9 @@
     font-size: 14px;
     font-weight: 300;
 }
+.hcount{
+    color: rgb(101, 100, 100);
+}
 
 @media (max-width:450px) {
     .pList{
