Solved filter space issue

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -185,3 +185,20 @@
         display: none;
     }
 }
+// @media (max-width: 751px) {
+//     .headerSearchBar{
+//         max-width: 725px;
+//     }
+//     .headerContainer{
+//         max-width: 725px;
+//     }
+//     .headerList{
+//         font-size : 15px
+//     }
+//     .headerTitle{
+//         font-size: 40px;
+//     }
+//     .headerDesc{
+//         font-size: 20px;
+//     }
+// }
