--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -39,6 +39,7 @@
     padding: 10px;
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
 
 .menu{
@@ -49,8 +50,8 @@
     position:absolute;
     background-color: white;
     color: gray;
-    top: 40px;
-    right: 10px;
+    top: 45px;
+    right: 30px;
     z-index: 3;
     border-radius: 1px;
 }
