--- a/src/styles/userRegister.scss
+++ b/src/styles/userRegister.scss
@@ -61,6 +61,24 @@
     font-family: 'Noto Sans';
   }
 
+  .loginBtn{
+    // background-color: blue;
+    // color: white;
+    // padding: 1px;
+    color: blue;
+    cursor: pointer;
+  }
+
+  .loginBtn:hover{
+    background-color: #0071c2;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding: 1px;
+    color: white;
+    border-radius: 2px;
+    font-size: 14px;
+  }
+
   .register{
     display: flex;
     justify-content: flex-end;
