--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,14 +1,13 @@
 .navbar{
     background-color: #003580;
-    height: 50px;
+    height: 60px;
     display: flex;
     justify-content: center;
+    align-items: center;
     z-index: 2;
     
-    
-    
     >div{
-        position:absolute ;
+        position:absolute;
         width: 100%;
         max-width: 1024px;
         color: white;
