--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -53,7 +53,6 @@
     padding: 10px;
     border: none;
     cursor: pointer;
-
 }
 
 .headerSearchBar{
@@ -102,6 +101,8 @@
     background-color: white;
     color: gray;
     top: 50px;
+    transition: all 2s ease-in;
+    // animation: alternate;
 }
 
 .optionItem{
