--- a/src/Components/MailList/maillist.scss
+++ b/src/Components/MailList/maillist.scss
@@ -26,6 +26,10 @@
     border: none;
 }
 
+.email_input:focus{
+  outline: none;
+}
+
 .mailInputContainer>button{
     height: 50px;
     background-color: #0071c2;
