--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -35,10 +35,12 @@
 }
 
 .userimg{
-    padding: 10px;
+    margin: 10px;
     width: 30px;
     height: 30px;
+    border-radius: 16px;
     cursor: pointer;
+    box-shadow: 1px 2px 8px #eee;
 }
 
 .menu{
@@ -53,15 +55,31 @@
     right: 30px;
     z-index: 3;
     border-radius: 1px;
+    transition: all 2s ease-in;
+    width: 100px;
 }
 
 .menuItem{
     padding: 10px;
-    color: gray;
+    // color: gray;
+}
+
+.menuitem:hover{
+    color: black;
 }
 
 .menuLink{
     text-decoration: none;
+    width: 100%;
+    text-align: center;
+    color: gray;
+}
+
+.menuLink:hover{
+    background-color: rgb(231, 231, 231);
+    color :black;
+    // font-size: large;
+    font-weight: 700;
 }
 
 .adminlink{
