--- a/src/Components/RoomBookLayout/roomBookLayout.scss
+++ b/src/Components/RoomBookLayout/roomBookLayout.scss
@@ -14,10 +14,19 @@
   background-color: white;
   padding: 20px;
   position: relative;
+  overflow: scroll;
+  // margin: 40px;
+  max-width: 1024px;
+  
+}
+.checkbox{
+  cursor: pointer;
+
 }
 
 .rClose {
   position: absolute;
+  overflow: hidden;
   color: #0071c2;
   font-size: 30px;
   cursor: pointer;
@@ -31,6 +40,7 @@
   gap: 50px;
   padding: 20px;
   justify-content: space-between;
+  border-bottom: 1px solid rgb(206, 206, 206);
 }
 
 .rInfo {
@@ -93,12 +103,22 @@
   margin-top: 15px;
   text-align: center;
 }
+.rItem:hover{
+  background-color: rgb(242, 242, 242);
+  border-radius: 10px;
+}
 @media (max-width:450px) {
 
   .rContainer{
     width: 80%;
+    height: 70vh;
+    padding: 20px 10px;
   }
   .rSelectRooms{
-    width: 20%;
+    width: 100%;
+  }
+  .rItem{
+    flex-direction: column;
+    // width: 70px;
   }
 }
