--- a/src/Components/list/list.scss
+++ b/src/Components/list/list.scss
@@ -27,6 +27,9 @@
   margin-bottom: 10px;
 }
 
+.text:focus{
+  outline: none;
+}
 .lsItem{
   display: flex;
   flex-direction: column;
@@ -66,6 +69,10 @@
 
 .lsOptionInput{
   width: 52px;
+}
+
+.lsOptionInput, .destination_input:focus{
+  outline: none;
 }
 
 .listSearch>button{
