Make search responsive for smaller screens

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -156,12 +156,15 @@
         height: 150px;
         flex-direction: column;
         bottom: 9px;
+    // bottom: 50px;
     }
     .headerSearchItem{
         border: 1.5px solid #febb02;
         border-bottom: 1.5px solid #febb02;
         width: 100%;
+        max-width: 350px;
         justify-content: center;
+        text-align: center;
         height: 40px;
     } 
     .headerBtn{
@@ -184,6 +187,16 @@
     }
     .headerList{
         display: none;
+    }
+    .date{
+        margin-top: 110px;
+    }
+    .options{
+        margin-top: 110px;
+    }
+    .headerSearchInput{
+        width: 130px;
+        // text-align: center;
     }
 }
 // @media (max-width: 751px) {
