--- a/src/Components/Featured/featured.scss
+++ b/src/Components/Featured/featured.scss
@@ -20,6 +20,11 @@
     height: 100%;
     flex:1;
     cursor: pointer;
+    transition: all 0.3s;
+}
+
+.featuredItem:hover{
+    border-radius: 10px;
 }
 
 .featuredImg{
@@ -27,6 +32,10 @@
     height: 100%;
     border-radius: 10px;
     object-fit: cover;
+    transition: all 0.3s;
+}
+.featuredImg:hover{
+    transform: scale(1.05);
 }
   
 .featuredTitles{
