--- a/src/Components/list/list.scss
+++ b/src/Components/list/list.scss
@@ -89,7 +89,7 @@
   flex: 3;
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   flex-direction: column;
 }
 
