--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -3,6 +3,11 @@
     max-width: 1024px;
     font-size: 12px;
     margin-top: 20px;
+    padding: 10px;
+    // display: flex;
+    // background-color: rgb(0, 0, 0);
+    // align-items: center;
+    // justify-content: center;
 }
 
 .fLists{
