--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -51,7 +51,7 @@
     position:absolute;
     background-color: white;
     color: gray;
-    top: 45px;
+    top: 55px;
     right: 30px;
     z-index: 3;
     border-radius: 1px;
@@ -91,6 +91,18 @@
 }
 .navButton:hover{
     box-shadow: 0px 0px 5px #fff;
+}
+.logo-booking{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    // background-color: red;
+    >.totalBookings{
+        border: 1px solid white;
+        padding: 7px 15px;
+        cursor: pointer;
+    }
 }
 
 @media (max-width: 751px) {
