--- a/src/Components/FeaturedProperties/featuredProperties.scss
+++ b/src/Components/FeaturedProperties/featuredProperties.scss
@@ -4,21 +4,30 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  z-index: 1;
+  overflow-x: auto;
   font-family: 'Roboto';
+  padding: 10px;
+}
+.fp::-webkit-scrollbar {
+  display: none;
 }
 
 .fpItem{
+  position: relative;
   flex: 1;
   gap: 10px;
+  transition: all 0.3s;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .fpImg{
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
+  width: 230px;
+  height: auto;
   border-radius: 10px;
+  object-fit: cover;
   transition: all 0.3s;
 }
 .fpImg:hover{
