--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -74,6 +74,7 @@
   flex-direction: column;
   gap: 10px;
   padding: 10px 0px 10px 0px;
+  border-bottom: 1.5px solid lightgray;
 }
 
 .sorting>span{
@@ -85,6 +86,18 @@
   display: flex;
   justify-content: space-between;
   font-size: 14px;
+}
+
+.property-type {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 10px 0px 10px 0px;
+}
+
+.property-type > span {
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .lsOptions {
