--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -5,6 +5,7 @@
 }
 
 .listWrapper {
+  // background-color: red;
   width: 100%;
   max-width: 1024px;
   display: flex;
@@ -139,6 +140,18 @@
   align-items: center;
   // justify-content: center;
   flex-direction: column;
+}
+
+.pagination {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  max-width: 738px;
+  background-color: #fff; 
+  text-align: center;
+  padding: 10px 0;
+  // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1000; 
 }
 
 @media (max-width:751px) {
