--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -14,16 +14,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        >div{
-            >button{
-                margin: 20px;
-                border: none;
-                padding: 5px 10px;
-                cursor: pointer;
-                color: #003580;
-
-            }
-        }
     } 
 }
 
@@ -97,12 +87,6 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    // background-color: red;
-    >.totalBookings{
-        border: 1px solid white;
-        padding: 7px 15px;
-        cursor: pointer;
-    }
 }
 .navItems{
     // margin: 10px;
@@ -124,11 +108,7 @@
         >div{
             >div{
                 >button{
-                    margin: 11px;
-                    border: none;
-                    padding: 3px 4px;
-                    cursor: pointer;
-                    color: #003580;
+                    display: none;
                 }
             }
         }
