--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -40,6 +40,42 @@
     font-weight: 500;
 }
 
+.customTooltip {
+    .tooltipContent {
+      padding: 10px;
+      max-width: 300px;
+      font-family: Arial, sans-serif;
+  
+      .tooltipHeader {
+        display: flex;
+        align-items: center;
+  
+        .tooltipImage {
+          width: 50px;
+          height: 50px;
+          object-fit: cover;
+          border-radius: 50%;
+          margin-right: 10px;
+        }
+  
+        .tooltipName {
+          font-weight: bold;
+          font-size: 1.1em;
+        }
+  
+        .tooltipDesignation {
+          font-size: 0.9em;
+          color: #757575;
+        }
+      }
+  
+      .tooltipDescription {
+        margin-top: 10px;
+        font-size: 0.85em;
+      }
+    }
+  }
+  
 @media (max-width: 450px) {
     .footer{
         width: 90%;
